ingress/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: app
 labels:
   app: app
   type: back-end
spec:
  template:
    metadata:
      name: app-pod
      labels:
        app: app
        type: back-end
    spec:
      containers:
        - name: app-pod
          image: ithelpstream/webapp:1.0.0
  replicas: 1
  selector:
    matchLabels:
      type: back-end
