ingress/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  ports:
   - port: 80
     targetPort: 80
  selector:
   app: app
   type: back-end
