ingress/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  ports:
   - targetPort: 80
     port: 80
  selector:
   app: web
   type: front-end
