ingress/single-svc-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: single-svc-ingress
spec:
 backend:
  serviceName: web-service
  servicePort: 80
